# fireworks-ai-cost-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  litellm_diff.json  main.py  pyproject.toml  server.py
agent/: __init__.py  browser_agent.py  compare.py  github_pr.py
